added sidebar.js, updated style.sass
converted sidebar toggle to use js instead of css.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,21 @@ body {
   transition: all 0.5s ease;
 }
 
+.main {
+  position: relative;
+  top: 12px;
+  margin-left: 57px;
+  transition: all 0.5s ease;
+}
+
+.toggle-btn, .toggle-btn .nav-link {
+  color: #fff;
+}
+
+#sidebar-toggle {
+  display: none;
+}
+
 .sidebar label {
   width: 100%;
 }
@@ -49,40 +64,12 @@ body {
   background: #0d6efd;
 }
 
-.toggle-btn, .toggle-btn .nav-link {
-  color: #fff !important;
-}
-
-.main {
-  position: fixed;
-  top: 12px;
-  left: 200px;
-  transition: all 0.5s ease;
-}
-
-/* sidebar toggle logic */
-#sidebar-toggle:checked ~ .sidebar {
+.minimized-sidebar {
   left: -150px;
 }
-#sidebar-toggle:checked ~ .main {
-  left: 50px;
-}
 
-@media (max-width: 767.98px) {
-  .sidebar {
-    left: -150px;
-  }
-
-  .main {
-    left: 50px;
-  }
-
-  #sidebar-toggle:checked ~ .sidebar {
-    left: 0px;
-  }
-  #sidebar-toggle:checked ~ .main {
-    left: 50px;
-  }
+.maximized-sidebar {
+  left: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
