--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -24,6 +24,19 @@ body
   left: 0
   transition: all 0.5s ease
 
+.main
+  position: relative
+  top: 12px
+  margin-left: 57px
+  transition: all 0.5s ease
+
+// style the button
+.toggle-btn, .toggle-btn .nav-link
+  color: $sidebarLinkColor
+
+#sidebar-toggle // the input
+  display: none
+
 // force label's width
 .sidebar label
   width: 100%
@@ -51,36 +64,9 @@ body
     color: $sidebarLinkActiveColor
     background: $sidebarLinkActiveBackground
 
-// force label white
-.toggle-btn, .toggle-btn .nav-link
-  color: #fff !important
+// sidebar toggle logic
+.minimized-sidebar
+  left: -150px
 
-.main
-  position: fixed
-  top: 12px
-  left: 200px
-  // margin-left: 200px
-  transition: all 0.5s ease
-
-/* sidebar toggle logic */
-#sidebar-toggle:checked
-  ~ .sidebar
-    left: -150px
-  
-  ~ .main
-    left: 50px
-
-// Large devices (desktops, 992px and up)
-@media (max-width: 767.98px)
-  .sidebar
-    left: -150px
-  
-  .main
-    left: 50px
-
-  #sidebar-toggle:checked
-    ~ .sidebar
-      left: 0px
-    
-    ~ .main
-      left: 50px
+.maximized-sidebar
+  left: 0
