--- a/public/sass/style.sass
+++ b/public/sass/style.sass
@@ -1,5 +1,5 @@
 /* settings */
-$font-weight: 200
+$font-weight: 300
 $sidebarLinkColor: #fff
 $sidebarLinkBackground: #fff
 $sidebarLinkActiveColor: #E0E4CC
@@ -48,6 +48,7 @@ body
   color: $sidebarLinkColor
   font-size: 20px
   span, i
+    margin: 0 auto
     display: inline-block
   span
     width: 128px
